# pipelines

./: .isort.cfg  .readthedocs.yml  .yapfignore  CHANGELOG.md  conf.py  make_gcpc_docs.sh  versions.json
.github/workflows/: gcpc-modules-tests.yml  kfp-kubernetes-library-test.yml  kfp-kubernetes-native-migration-tests.yaml  kfp-sdk-client-tests.yml  kfp-sdk-tests.yml  kfp-sdk-unit-tests.yml  publish-packages.yml  readthedocs-builds.yml  sdk-component-yaml.yml  sdk-docformatter.yml  sdk-isort.yml  sdk-upgrade.yml  sdk-yapf.yml  validate-generated-files.yml
api/: Makefile  README.md
api/v2alpha1/: pipeline_spec.proto
backend/: Dockerfile
backend/api/: build_kfp_server_api_python_package.sh
components/google-cloud/: RELEASE.md  (+1 more)
frontend/: package-lock.json  package.json
hack/: install-go-licenses.sh
kubernetes_platform/: Makefile
sdk/: CONTRIBUTING.md  Makefile
sdk/python/: MANIFEST.in  generate_protos.sh  pyproject.toml  requirements-dev.txt  requirements.in  setup.py
sdk/python/kfp/: __init__.py
sdk/python/kfp/cli/: output.py
sdk/python/kfp/client/: client.py  client_test.py  set_volume_credentials.py  token_credentials_base.py
sdk/python/kfp/compiler/: compiler_test.py  pipeline_spec_builder.py
sdk/python/kfp/components/: base_component.py  yaml_component.py
sdk/python/kfp/kubernetes/: __init__.py  common.py  config_map.py  empty_dir.py  field.py  image.py  kubernetes_executor_config_pb2.py  node_affinity.py  node_selector.py  pod_metadata.py  secret.py  timeout.py  toleration.py  volume.py
sdk/python/kfp/kubernetes/test/snapshot/data/: empty_dir_mounts.py  field_path_as_env.py  general_ephemeral_volume.py  nodeaffinity.py  toleration.py
sdk/python/kfp/kubernetes/test/unit/: test_config_map.py  test_empty_dir_mounts.py  test_field.py  test_image_pull_secrets.py  test_node_affinity.py  test_node_selector.py  test_pod_metadata.py  test_secret.py  test_timeout.py  test_tolerations.py  test_volume.py
sdk/python/kfp/local/: config.py  dag_orchestrator.py  pipeline_orchestrator_test.py  placeholder_utils_test.py  subprocess_task_handler.py  subprocess_task_handler_test.py  task_dispatcher_test.py  testing_utilities.py
sdk/python/kfp/pipeline_spec/: pipeline_spec_pb2.py
sdk/python/kfp/server_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
sdk/python/kfp/server_api/api/: __init__.py  auth_service_api.py  experiment_service_api.py  healthz_service_api.py  pipeline_service_api.py  pipeline_upload_service_api.py  recurring_run_service_api.py  report_service_api.py  run_service_api.py  visualization_service_api.py
sdk/python/kfp/server_api/models/: __init__.py  authorize_request_resources.py  authorize_request_verb.py  googlerpc_status.py  pipeline_task_detail_child_task.py  predicate_int_values.py  predicate_long_values.py  predicate_string_values.py  protobuf_any.py  protobuf_null_value.py  recurring_run_mode.py  v2beta1_artifact_list.py  v2beta1_create_pipeline_and_version_request.py  v2beta1_cron_schedule.py  v2beta1_delete_propagation_policy.py  v2beta1_experiment.py  v2beta1_experiment_storage_state.py  v2beta1_filter.py  v2beta1_get_healthz_response.py  v2beta1_list_experiments_response.py  v2beta1_list_pipeline_versions_response.py  v2beta1_list_pipelines_response.py  v2beta1_list_recurring_runs_response.py  v2beta1_list_runs_response.py  v2beta1_periodic_schedule.py  v2beta1_pipeline.py  v2beta1_pipeline_task_detail.py  v2beta1_pipeline_task_executor_detail.py  v2beta1_pipeline_version.py  v2beta1_pipeline_version_reference.py  v2beta1_predicate.py  v2beta1_predicate_operation.py  v2beta1_recurring_run.py  v2beta1_recurring_run_status.py  v2beta1_run.py  v2beta1_run_details.py  v2beta1_run_storage_state.py  v2beta1_runtime_config.py  v2beta1_runtime_state.py  v2beta1_runtime_status.py  (+4 more)
sdk/python/kfp/server_api/test/: test_auth_service_api.py  test_authorize_request_resources.py  test_authorize_request_verb.py  test_experiment_service_api.py  test_googlerpc_status.py  test_healthz_service_api.py  test_pipeline_service_api.py  test_pipeline_task_detail_child_task.py  test_pipeline_upload_service_api.py  test_predicate_int_values.py  test_predicate_long_values.py  test_predicate_string_values.py  test_protobuf_any.py  test_protobuf_null_value.py  test_recurring_run_mode.py  test_recurring_run_service_api.py  test_report_service_api.py  test_run_service_api.py  test_v2beta1_artifact_list.py  test_v2beta1_create_pipeline_and_version_request.py  test_v2beta1_cron_schedule.py  test_v2beta1_delete_propagation_policy.py  test_v2beta1_experiment.py  test_v2beta1_experiment_storage_state.py  test_v2beta1_filter.py  test_v2beta1_get_healthz_response.py  test_v2beta1_list_experiments_response.py  test_v2beta1_list_pipeline_versions_response.py  test_v2beta1_list_pipelines_response.py  test_v2beta1_list_recurring_runs_response.py  test_v2beta1_list_runs_response.py  test_v2beta1_periodic_schedule.py  test_v2beta1_pipeline.py  test_v2beta1_pipeline_task_detail.py  test_v2beta1_pipeline_task_executor_detail.py  test_v2beta1_pipeline_version.py  test_v2beta1_pipeline_version_reference.py  test_v2beta1_predicate.py  test_v2beta1_predicate_operation.py  test_v2beta1_recurring_run.py  (+12 more)
sdk/python/test/client/: client_test.py
sdk/python/test/runtime/: execute_commands_args_test.py
test/: presubmit-component-yaml.sh  presubmit-isort-sdk.sh  presubmit-test-sdk-upgrade.sh  presubmit-tests-sdk-client.sh  presubmit-tests-sdk-unit.sh  presubmit-tests-sdk.sh  test_kubernetes_platform_library.sh
(+140 files in other folders)
