[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kfp"
description = "Kubeflow Pipelines SDK"
readme = "README.md"
requires-python = ">=3.9.0"
license = "Apache-2.0"
authors = [
    { name = "The Kubeflow Authors", email = "kubeflow-pipelines@google.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1.8",
    "click-option-group==0.5.7",
    "docstring-parser>=0.7.3,<1",
    "google-api-core>=1.31.5,<3.0.0dev,!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0",
    "google-auth>=1.6.1,<3",
    "google-cloud-storage>=2.2.1,<4",
    "certifi",
    "python-dateutil",
    "six>=1.10",
    "kubernetes>=8.0.0,<31",
    "protobuf>=6.31.1,<7.0",
    "PyYAML>=5.3,<7",
    "requests-toolbelt>=0.8.0,<2",
    "tabulate>=0.8.6,<1",
    "urllib3<3.0.0",
    "typing-extensions>=3.7.4,<5; python_version<'3.9'",
    "absl-py>=0.9,<2",
    "cloudpickle>=2.0.0,<3",
    "Deprecated>=1.2.7,<2",
    "fire>=0.3.1,<1",
    "jsonschema>=3.0.1,<4",
    "strip-hints>=0.1.8,<1",
    "uritemplate>=3.0.1,<4",
    "typer>=0.3.2,<1.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://kubeflow-pipelines.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/kubeflow/pipelines/issues"
Source = "https://github.com/kubeflow/pipelines/tree/master/sdk"
Changelog = "https://github.com/kubeflow/pipelines/blob/master/sdk/RELEASE.md"

[project.scripts]
dsl-compile = "kfp.cli.compile_:main"
kfp = "kfp.cli.__main__:main"

[project.optional-dependencies]
docker = ["docker"]
notebooks = ["nbclient>=0.10,<1", "ipykernel>=6,<7", "jupyter_client>=7,<9"]
kubernetes = []
all = ["docker", "nbclient>=0.10,<1", "ipykernel>=6,<7", "jupyter_client>=7,<9"]
dev = [
    "absl-py==1.4.0",
    "docformatter==1.4",
    "docker==5.0.3",
    "isort==5.10.1",
    "mypy==0.941",
    "nbformat==5.10.4",
    "pip-tools==6.0.0",
    "pre-commit==2.19.0",
    "pycln==2.1.1",
    "pylint==2.17.7",
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "pytest-xdist==2.5.0",
    "types-protobuf==3.19.15",
    "types-PyYAML==6.0.5",
    "types-requests==2.27.14",
    "types-tabulate==0.8.6",
    "yapf==0.43.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "kfp.version.__version__" }

[tool.setuptools.packages.find]
exclude = ["*test*"]
