[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kfp"
description = "Kubeflow Pipelines SDK"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "The Kubeflow Authors", email = "kubeflow-pipelines@google.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
# Full SDK for authoring, compiling, and CLI usage
sdk = [
    "click>=8.1.8",
    "click-option-group==0.5.7",
    "docstring-parser>=0.7.3,<1",
    "google-api-core>=1.31.5,<3.0.0dev,!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0",
    "google-auth>=1.6.1,<3",
    "google-cloud-storage>=2.2.1,<4",
    "requests-toolbelt>=0.8.0,<2",
    "tabulate>=0.8.6,<1",
    "urllib3<3.0.0",
    "typing-extensions>=3.7.4,<5; python_version<'3.9'",
]
# Kubernetes platform support
kubernetes = ["kubernetes>=8.0.0,<31"]
# Docker component support
docker = ["docker"]
# Jupyter notebook support
notebooks = ["nbclient>=0.10,<1", "ipykernel>=6,<7", "jupyter_client>=7,<9"]
# Everything
all = ["kfp[sdk]", "kfp[kubernetes]", "kfp[docker]", "kfp[notebooks]"]

[project.urls]
Documentation = "https://kubeflow-pipelines.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/kubeflow/pipelines/issues"
Source = "https://github.com/kubeflow/pipelines/tree/master/sdk"
Changelog = "https://github.com/kubeflow/pipelines/blob/master/sdk/RELEASE.md"

[project.scripts]
dsl-compile = "kfp.cli.compile_:main"
kfp = "kfp.cli.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kfp*"]
exclude = ["*test*"]

[tool.setuptools.dynamic]
version = { attr = "kfp.version.__version__" }
dependencies = { file = ["requirements.in"] }
